--- a/index.html
+++ b/index.html
@@ -10,6 +10,18 @@
 <div id="box">
   <p> <center>Module Assignments </center></p>
    <div id="nav">
+      <ul>
+        <li><a href=" https://sadomohamed.github.io/Portfolio-Design/">Home</a> </li>
+        <li><a href="https://sadomohamed.github.io/AboutMe/" target="_blank">About Me</a></li>
+        <li><a href="https://sadomohamed.github.io/Coarsework/" target="_blank">Coursework</a></li>
+        <li><a href="https://sadomohamed.github.io/artificat/" target="_blank">Artifacts</a></li>
+        <li><a href="https://sadomohamed.github.io/module-assigments-/" target="_blank">Module Assignments</a></li>
+        <li><a href="https://sadomohamed.github.io/contact-me-/" target="_blank">Contact me</a></li>
+        <li><a href="https://sadomohamed.github.io/art-/" target="_blank">Creative page</a></li>
+      </ul>
+    </div>
+  </div>
+   <div id="nav">
         <ul>
           <li><a href="https://sadomohamed.github.io/module-1/">Module1</a></li>
           <li><a href="https://sadomohamed.github.io/module2/">Module2</a></li>
