--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 <head>
   <meta charset="utf-8">
@@ -8,9 +9,9 @@
 <body>
 
 <div id="box">
-  <p> <center>Module Assignments </center></p>
+  <p>Module Assignments</p>
    
-   <div id="nav">
+   <div class="nav">
         <ul>
           <li><a href="https://sadomohamed.github.io/module-1/">Module1</a></li>
           <li><a href="https://sadomohamed.github.io/module2/">Module2</a></li>
@@ -19,7 +20,7 @@
           <li><a href="https://sadomohamed.github.io/index.html/">Module5</a></li>
         </ul>
       </div>
-       <div id="nav">
+       <div class="nav">
       <ul>
         <li><a href=" https://sadomohamed.github.io/Portfolio-Design/">Home</a> </li>
         <li><a href="https://sadomohamed.github.io/AboutMe/" target="_blank">About Me</a></li>
